# Janus

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  janus.toml
benches/: bench.rs
benches/fixtures/: agentic_5turn.txt  cache_repeat.txt  chat_general.txt  multi_file.txt  node_stacktrace.txt  python_docstrings.txt  react_jsdoc.txt
src/: config.rs  embed.rs  main.rs  metrics.rs  proxy.rs  session.rs  stream_reassemble.rs  tokenizer.rs
src/cache/: mod.rs  redis_cache.rs
src/pipeline/: ast_prune.rs  dedup.rs  mod.rs  regex_compress.rs  semantic_trim.rs
src/tui/: mod.rs  sparkline.rs  ui.rs
