[package]
name = "janus"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP / Proxy
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Token counting
tiktoken-rs = "0.6"

# Regex pipeline
regex = "1"
lazy_static = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Embedding
fastembed = "5"

# Cache
redis = { version = "1", features = ["tokio-comp"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
pin-project-lite = "0.2"
bytes = "1"

# AST pruning
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"

# Session state
dashmap = "6"
